# fastapi-audit

./: .gitignore  Dockerfile.dev  README.md  docker-compose.dev.yml  env.dev  pyproject.toml  requirement.dev.txt  requirement.txt
app/: __init__.py  database.py  main.py
app/models/: books.py  user.py
app/models/audit/: session_listeners.py
app/routers/: user.py
app/schemas/: __init__.py  user.py
app/services/: book.py
app/static/panels/: audit.css
app/templates/panels/: audit_detail.html  audit_table.html  audit_timeline.html
app/utils/: audit_session.py  get_client_ip.py
fastapi_audit/: audit.py  database.py  main.py
fastapi_audit/models/: __init__.py  books.py  user.py
fastapi_audit/models/audit/: __init__.py  change_set.py  decorators.py  exceptions.py  orm.py  session_listeners.py  validation.py
fastapi_audit/panels/: __init__.py  audit_panel.py
fastapi_audit/routers/: book.py  user.py
fastapi_audit/schemas/: __init__.py  book.py
fastapi_audit/security/: __init__.py  argon2_hash.py
fastapi_audit/services/: book.py  user.py
fastapi_audit/services/audit/: custom_strategies.py  request_context.py  sanitize.py
fastapi_audit/static/panels/: audit.css
fastapi_audit/templates/panels/: audit.html  audit_detail.html  audit_entity_options.html  audit_timeline.html
fastapi_audit/utils/: audit_session.py  get_client_ip.py
tests/: conftest.py  test.py
tests/integration/: conftest.py
tests/integration/audit/: test_session_listeners.py
tests/unit/audit/: test_change_set.py  test_decorators.py  test_request_context.py  test_sanitize.py  (+1 more)
(+2 files in other folders)
